# loop-engineering

./: README.md
docs/superpowers/plans/: 2026-06-21-underwriting-deepagents.md  2026-06-21-underwriting-loop.md
docs/superpowers/specs/: 2026-06-20-underwriting-deepagents-design.md  2026-06-20-underwriting-loop-engineering-design.md
underwriting_deepagents/: CLAUDE.md  pyproject.toml
underwriting_deepagents/src/: agent.py  audit.py  billing.py  event_loop.py  hill_climbing.py  judge.py  main.py  memory.py  middleware.py
underwriting_deepagents/src/tools/: rules_tool.py  (+1 more)
underwriting_deepagents/state/: best_prompt.txt  pending_applications.json  run_state.json
underwriting_deepagents/tests/: test_agent.py  test_event_loop.py  test_hill_climbing.py  test_judge.py  test_middleware.py  test_tools.py
underwriting_loop/: CLAUDE.md  pyproject.toml
underwriting_loop/src/: main.py
underwriting_loop/src/billing/: cost_meter.py
underwriting_loop/src/data/: applications.json  historical_decisions.json  rules_kb.json
underwriting_loop/src/judge/: audit.py  judge.py
underwriting_loop/src/loops/: loop1_agent.py  loop2_verification.py  loop3_event.py  loop4_hill_climbing.py
underwriting_loop/src/memory/: lesson_memory.py
underwriting_loop/src/tools/: application_tool.py  decision_tool.py  risk_signal_tool.py  rules_tool.py
underwriting_loop/state/: best_prompt.txt  pending_applications.json  run_state.json
underwriting_loop/tests/: test_cost_meter.py  test_judge.py  test_loop1.py  test_loop2.py  test_loop3.py  test_loop4.py  test_memory.py  test_tools.py
