[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "underwriting_loop"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.50.0",
    "langgraph>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
